# gitgpui

./: .gitignore  CONTRIBUTING.md  Cargo.toml  FINAL_DESIGN.md  LICENSE-APACHE  LICENSE-GPL-3.0  LICENSE-MIT  NOTICE  PERF_OPTIMIZATION_TASKS.md  README.md  architecture_split.md  code_analysis.md  conflict_editor.md  cross_platform_issues.md  flatpak.md  mergetool_large_file_reviewable_streaming_design.md  mergetool_large_file_streaming_investigation.md  mergetool_stream_everything_execution_plan.md  optimizations.md  perf.md  perf_issues.md  performance_analysis.md  plan.md  resize_analyse.md  tech_debt.md  todo.md
crates/gitcomet-app/: Cargo.toml  build.rs
crates/gitcomet-app/src/: cli.rs  crashlog.rs  difftool_mode.rs  extract_fixtures_mode.rs  main.rs  mergetool_mode.rs  setup_mode.rs
crates/gitcomet-app/src/cli/: compat.rs  tests.rs
crates/gitcomet-app/tests/: difftool_git_integration.rs  extract_merge_fixtures_integration.rs  mergetool_git_integration.rs  standalone_tool_mode_integration.rs
crates/gitcomet-app/windows/: gitcomet.rc
crates/gitcomet-app/wix/: main.wxs
crates/gitcomet-core/: Cargo.toml
crates/gitcomet-core/src/: auth.rs  conflict_session.rs  domain.rs  error.rs  file_diff.rs  git_ops_trace.rs  history_query.rs  lib.rs  merge.rs  merge_extraction.rs  mergetool_trace.rs  platform.rs  process.rs  services.rs  text_utils.rs
crates/gitcomet-core/src/conflict_session/: autosolve.rs  history.rs  marker_parse.rs  subchunk.rs  tests.rs
crates/gitcomet-core/tests/: conflict_label_formatting.rs  diff_from_unified.rs  domain_smoke.rs  libgit2_git_resources.rs  meld_algorithm_tests.rs  merge_algorithm.rs  merge_fixture_harness.rs  merge_git_extraction.rs  merge_permutation_corpus.rs
crates/gitcomet-core/tests/fixtures/merge/: 100_libgit2_df_modeconflict_commits_df_side1_vs_df_side2_dir_10_file_txt_base.txt  102_libgit2_df_modeconflict_commits_df_side1_vs_df_side2_file_3_expected_result.txt  103_libgit2_df_modeconflict_commits_df_side1_vs_df_side2_dir_9_contrib1.txt  103_libgit2_df_modeconflict_commits_df_side1_vs_df_side2_dir_9_contrib2.txt  103_libgit2_df_modeconflict_commits_df_side1_vs_df_side2_dir_9_expected_result.txt  107_libgit2_df_modeconflict_commits_df_side1_vs_df_side2_dir_7_contrib1.txt  107_libgit2_df_modeconflict_commits_df_side1_vs_df_side2_dir_7_contrib2.txt  107_libgit2_df_modeconflict_commits_df_side1_vs_df_side2_dir_7_expected_result.txt  109_libgit2_df_modeconflict_commits_df_side1_vs_df_side2_dir_6_base.txt  109_libgit2_df_modeconflict_commits_df_side1_vs_df_side2_dir_6_contrib1.txt  109_libgit2_df_modeconflict_commits_df_side1_vs_df_side2_dir_6_expected_result.txt  10_libgit2_merge_resolve_master_vs_branch_automergeable_txt_base.txt  10_libgit2_merge_resolve_master_vs_branch_automergeable_txt_expected_result.txt  111_libgit2_df_modeconflict_commits_df_side1_vs_df_side2_dir_8_base.txt  111_libgit2_df_modeconflict_commits_df_side1_vs_df_side2_dir_8_contrib2.txt  111_libgit2_df_modeconflict_commits_df_side1_vs_df_side2_dir_8_expected_result.txt  112_libgit2_df_modeconflict_commits_df_side1_vs_df_side2_file_1_contrib2.txt  117_libgit2_df_modeconflict_commits_df_side1_vs_df_side2_file_2_new_expected_result.txt  1183_libgit2_merge_files_crlf_conflict_markers_for_crlf_files_diff3_expected_result.txt  1184_libgit2_merge_files_skips_binaries_expected_result.txt  1185_libgit2_merge_files_automerge_use_best_path_and_mode_content_contrib1.txt  1185_libgit2_merge_files_automerge_use_best_path_and_mode_content_expected_result.txt  1186_libgit2_merge_files_automerge_from_index_content_expected_result.txt  1187_libgit2_merge_files_handles_binaries_when_favored_content_expected_result.txt  1188_libgit2_merge_files_skips_large_files_behavioral_proxy_expected_result.txt  1189_libgit2_merge_files_handles_binaries_when_favored_bytes_expected_result.txt  118_libgit2_analysis_branch_vs_ff_branch_removed_in_master_txt_base.txt  1190_libgit2_merge_resolve_commits_df_side1_vs_df_side2_path_dir_6_contrib1.txt  1190_libgit2_merge_resolve_commits_df_side1_vs_df_side2_path_dir_6_contrib2.txt  1190_libgit2_merge_resolve_commits_df_side1_vs_df_side2_path_dir_6_expected_result.txt  1191_libgit2_merge_resolve_commits_df_side1_vs_df_side2_path_dir_7_base.txt  1191_libgit2_merge_resolve_commits_df_side1_vs_df_side2_path_dir_7_contrib1.txt  1191_libgit2_merge_resolve_commits_df_side1_vs_df_side2_path_dir_7_expected_result.txt  (+222 more)
crates/gitcomet-core/tests/libgit2/: README.md
crates/gitgpui-app/: Cargo.toml
crates/gitgpui-app/src/: cli.rs  crashlog.rs  difftool_mode.rs  main.rs  mergetool_mode.rs  setup_mode.rs
crates/gitgpui-app/tests/: difftool_git_integration.rs  mergetool_git_integration.rs  standalone_tool_mode_integration.rs
crates/gitgpui-state/: Cargo.toml
crates/gitgpui-state/src/: lib.rs  model.rs  msg.rs  session.rs  store.rs
crates/gitgpui-state/src/msg/: effect.rs  message.rs  message_debug.rs  repo_command_kind.rs  store_event.rs
crates/gitgpui-state/src/store/: effects.rs  executor.rs  mod.rs  reducer.rs  repo_monitor.rs  tests.rs
crates/gitgpui-state/src/store/effects/: clone.rs  (+5 more)
crates/gitgpui-ui-gpui/: Cargo.toml
crates/gitgpui-ui-gpui/benches/: performance.rs
crates/gitgpui-ui-gpui/src/: app.rs  assets.rs  components.rs  focused_diff.rs  focused_merge.rs  lib.rs  smoke_tests.rs  theme.rs  view.rs
crates/gitgpui-ui-gpui/src/kit/: button.rs  mod.rs  scrollbar.rs  tabs.rs  text_input.rs
crates/gitgpui-ui-gpui/src/view/: branch_sidebar.rs  caches.rs  chrome.rs  color.rs  conflict_resolver.rs  date_time.rs  diff_navigation.rs  diff_preview.rs  diff_text_model.rs  diff_text_selection.rs  diff_utils.rs  fingerprint.rs  history_graph.rs  linux_desktop_integration.rs  mod.rs  overlays.rs  panels.rs  patch_split.rs  poller.rs  repo_open.rs  rows.rs  state_apply.rs  toast_host.rs  tooltip.rs  tooltip_host.rs  word_diff.rs
crates/gitgpui-ui-gpui/src/zed_port/: button.rs  components.rs  context_menu.rs  diff_stat.rs  mod.rs  picker_prompt.rs  split_button.rs  tab.rs  tab_bar.rs  toast.rs  tokens.rs
crates/win32-window-utils/: Cargo.toml
(+556 files in other folders)
