[workspace]
resolver = "2"
members = [
  "crates/gitgpui-app",
  "crates/gitgpui-core",
  "crates/gitgpui-git",
  "crates/gitgpui-git-gix",
  "crates/gitgpui-state",
  "crates/gitgpui-ui",
  "crates/gitgpui-ui-gpui",
]

default-members = [
  "crates/gitgpui-core",
  "crates/gitgpui-git",
  "crates/gitgpui-state",
]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/<your-org>/gitgpui"

[workspace.lints.rust]
unsafe_code = "forbid"

[replace]
"ashpd:0.11.0" = { path = "vendor/ashpd-0.11.0" }
"ashpd:0.12.0" = { path = "vendor/ashpd-0.12.0" }
