[workspace]
resolver = "2"
members = [
  "crates/gitgpui-app",
  "crates/gitgpui-core",
  "crates/gitgpui-git",
  "crates/gitgpui-git-gix",
  "crates/gitgpui-state",
  "crates/gitgpui-ui",
  "crates/gitgpui-ui-gpui",
]

default-members = [
  "crates/gitgpui-app",
  "crates/gitgpui-core",
  "crates/gitgpui-git",
  "crates/gitgpui-git-gix",
  "crates/gitgpui-state",
  "crates/gitgpui-ui",
  "crates/gitgpui-ui-gpui",
]

[workspace.package]
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/<your-org>/gitgpui"

[workspace.lints.rust]
unsafe_code = "forbid"
