[package]
name = "gitcomet-core"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
regex = { workspace = true }

[dev-dependencies]
rustc-hash = { workspace = true }
tempfile = { workspace = true }
