[package]
name = "gitcomet-core"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
test-support = []

[dependencies]
regex = { workspace = true }
rustc-hash = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
