[package]
name = "gitgpui-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = []
ui = ["dep:gitgpui-ui"]
ui-gpui = ["ui", "dep:gitgpui-ui-gpui"]
gix = ["dep:gitgpui-git-gix"]

[dependencies]
gitgpui-core = { path = "../gitgpui-core" }
gitgpui-git = { path = "../gitgpui-git" }
gitgpui-git-gix = { path = "../gitgpui-git-gix", optional = true }
gitgpui-ui = { path = "../gitgpui-ui", optional = true }
gitgpui-ui-gpui = { path = "../gitgpui-ui-gpui", optional = true }
