[package]
name = "gitgpui-state"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
gitgpui-core = { path = "../gitgpui-core" }
notify = "8"
smol = "2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
