[package]
name = "gitgpui-ui-gpui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
gitgpui-core = { path = "../gitgpui-core" }
gitgpui-state = { path = "../gitgpui-state" }
gitgpui-ui = { path = "../gitgpui-ui" }
gpui = "0.2.2"
unicode-segmentation = "1.12.0"

[dev-dependencies]
gpui = { version = "0.2.2", features = ["test-support"] }

[target.'cfg(target_os = "linux")'.dependencies]
ashpd = { version = "0.12.1", default-features = false, features = ["tokio"] }
