[package]
name = "gitcomet-win32-window-utils"
workspace = "../.."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
windows = { workspace = true, features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
